[package]
name = "spritesheet_generator"
version = "0.5.0"
description = "A spritesheet generator library using the piston's texture_packer"
keywords = ["texture", "packer", "spritesheet", "atlas"]
license = "MIT"
readme = "readme.md"
edition = "2018"
repository = "https://github.com/slyedoc/spritesheet-generator.git"

[lib]
name = "spritesheet_generator"
path = "src/lib.rs"

[features]
build-binary = [ "clap", "image", "regex", "serde_json", "ron" ]

[[bin]]
name = "sprite-gen"
path = "src/main.rs"
required-features = ["build-binary"]

[dependencies]
serde = { version = "1.0.79", features = ["derive"], optional = false }
serde_json = { version = "1.0.31", optional = true }
regex = { version = "1.0.5", optional = true }
texture_packer = { version = "0.23.0", optional = false }
image = { version = "0.23.14", default-features = true, optional = true }
clap = { version = "3.0.0-beta.2", optional = true } # Using beta
ron = { version = "0.6.4", optional = true }  # not using yet

