[package]
name = "spritesheet_generator"
version = "0.5.0"
description = "A spritesheet generator library using the piston's texture_packer"
keywords = ["texture", "packer", "spritesheet", "atlas", "bevy"]
license = "MIT"
readme = "readme.md"
edition = "2018"
repository = "https://github.com/slyedoc/spritesheet-generator.git"

[lib]
name = "spritesheet_generator"
path = "src/lib.rs"

[features]
build-binary = [ "clap", "image", "regex", "serde_json", "texture_packer", "ron" ]

[[bin]]
name = "sprite-gen"
path = "src/main.rs"
required-features = ["build-binary"]

[dependencies]
serde = { version = "1.0.79", features = ["derive"], optional = false }

serde_json = { version = "1.0.31", optional = true }
regex = { version = "1.0.5", optional = true }
texture_packer = { version = "0.23.0", optional = true }
image = { version = "0.23.14", default-features = true, optional = true }
clap = { version = "3.0.0-beta.2", optional = true } # Using beta for derive config
ron = { version = "0.6.4", optional = true }

# Didnt plan on including bevy, but needed its type_uuid, and its not exported as a feature
# see https://github.com/bevyengine/bevy/issues/32 for alot more info on this
#bevy_reflect = { version = "0.5", optional = false }  #didn't work, rust still thinks its a different version, will try other ways later
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = true }
